--- a/package.json
+++ b/package.json
@@ -18,15 +18,14 @@
         "flatpickr": "^4.6.13",
         "laravel-vue-pagination": "^4.1.1",
         "noty": "^3.2.0-beta-deprecated",
-        "select2": "^4.1.0-rc.0",
         "sweetalert2": "^11.6.13",
         "vform": "^2.1.2",
         "vue": "^3.2.36",
         "vue-axios": "^3.5.2",
         "vue-loader": "^17.0.1",
         "vue-router": "^4.1.6",
-        "vue-select2": "^0.2.6",
         "vue-template-compiler": "^2.7.14",
+        "vue3-select2-component": "^0.1.7",
         "vuetify": "^3.3.21",
         "vuex": "^4.0.2"
     }
