--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
         "vue": "^3.2.36",
         "vue-axios": "^3.5.2",
         "vue-loader": "^17.0.1",
+        "vue-multiselect": "^3.2.0",
         "vue-router": "^4.1.6",
-        "vue-template-compiler": "^2.7.14",
+        "vue-template-compiler": "^0.1.0",
         "vue3-select2-component": "^0.1.7",
         "vuetify": "^3.3.21",
         "vuex": "^4.0.2"
